ajout référencement local et regex pour email

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,39 @@
          name="description"
          content="Portfolio du web développeur junior Pierre Schnell"
       />
+
+      <!-- Balises Open Graph -->
+      <meta
+         property="og:title"
+         content="Pierre Schnell, développeur Lyonnais"
+      />
+      <meta property="og:type" content="website" />
+      <meta
+         property="og:url"
+         content="https://schnell10.github.io/Portfolio/"
+      />
+      <meta
+         property="og:image"
+         content="https://raw.githubusercontent.com/Schnell10/Portfolio/main/public/android-chrome-512x512.png"
+      />
+      <meta
+         property="og:description"
+         content="Développeur web front et back à la recherche d'une alternance afin de continuer à progresser dans le métier."
+      />
+      <!-- Twitter summary card with large image must be at least 280x150px -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta
+         name="twitter:title"
+         content="Pierre Schnell, développeur Lyonnais"
+      />
+      <meta
+         name="twitter:description"
+         content="Développeur web front et back à la recherche d'une alternance afin de continuer à progresser dans le métier."
+      />
+      <meta
+         name="twitter:image"
+         content="https://raw.githubusercontent.com/Schnell10/Portfolio/main/public/android-chrome-512x512.png"
+      />
       <!-- Icônes pour les appareils mobiles -->
       <link
          rel="apple-touch-icon"
