add package to build

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,78 @@
       <link rel="manifest" href="site.webmanifest" />
 
       <title>Pierre Schnell</title>
+
+      <!-- Balises Schema.org pour le site -->
+      <script type="application/ld+json">
+         {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "url": "https://schnell10.github.io/Portfolio/",
+            "name": "Portfolio Pierre Schnell",
+            "description": "Portfolio développeur web junior, Pierre Schnell"
+         }
+      </script>
+
+      <!-- Balises Schema.org pour l'auteur (vous) -->
+      <script type="application/ld+json">
+         {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Schnell",
+            "url": "https://schnell10.github.io/Portfolio/",
+            "sameAs": [
+               "https://www.linkedin.com/in/pierre-schnell-33a26a142",
+               "https://github.com/Schnell10"
+            ]
+         }
+      </script>
+
+      <!-- Balises Schema.org pour les projets -->
+      <script type="application/ld+json">
+         {
+            "@context": "https://schema.org",
+            "@type": "CreativeWork",
+            "name": "Nina Carducci",
+            "url": "https://schnell10.github.io/OCProjet5_optimisation_SEO_debug/",
+            "description": "Optimisation et débug d'un site de photographe"
+         }
+      </script>
+      <script type="application/ld+json">
+         {
+            "@context": "https://schema.org",
+            "@type": "CreativeWork",
+            "name": "Sophie Bluel",
+            "url": "https://schnell10.github.io/Portfolio/#/projet/sophie-bluel",
+            "description": "Création d'une page web dynamique avec JavaScript"
+         }
+      </script>
+      <script type="application/ld+json">
+         {
+            "@context": "https://schema.org",
+            "@type": "CreativeWork",
+            "name": "Booki",
+            "url": "https://schnell10.github.io/OC_projet2_integration_web_avec_HTML_CSS/",
+            "description": "Création de la page d'accueil d'une agence de voyage avec HTML CSS"
+         }
+      </script>
+      <script type="application/ld+json">
+         {
+            "@context": "https://schema.org",
+            "@type": "CreativeWork",
+            "name": "Mon vieux grimoire",
+            "url": "https://schnell10.github.io/Portfolio/#/projet/mon-vieux-grimoire",
+            "description": "Développement du back-end d'un site de notation de livres"
+         }
+      </script>
+      <script type="application/ld+json">
+         {
+            "@context": "https://schema.org",
+            "@type": "CreativeWork",
+            "name": "Kasa",
+            "url": "https://schnell10.github.io/OCProjet6_Crez-une-application-web-de-location-immobiliere-avec-React/",
+            "description": "Création d'une application web de location immobilière avec React"
+         }
+      </script>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
